<?xml version="1.0" encoding="utf-8"?>
<!--
   This file is part of MyPlaylist.

    MyPlaylist is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    MyPlaylist is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with MyPlaylist.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <PreferenceCategory
        android:title="@string/preferences">
        <CheckBoxPreference
            android:key="@string/pref_key_looping"
            android:title="@string/pref_title_looping"
            android:summary="@string/pref_summary_looping" />
        <CheckBoxPreference
            android:key="@string/pref_key_random"
            android:title="@string/pref_title_random"
            android:summary="@string/pref_summary_random" />
    </PreferenceCategory>

    <PreferenceCategory>
        <Preference android:title="@string/validate"
            android:key="button" />
    </PreferenceCategory>


</PreferenceScreen>