<!--
   This file is part of MyPlaylist.

    MyPlaylist is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    MyPlaylist is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with MyPlaylist.  If not, see <http://www.gnu.org/licenses/>.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    android:scaleType = "centerCrop"
    tools:context="fr.eisti.android.myplaylist.activities.PlayListVisualizeActivity">

    <TextView
        android:id="@+id/playlist_name"
        android:text="@string/playlist_name"
        android:textSize="19sp"
        android:textColor="#C0C0C0"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/music_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playlist_name"
        android:layout_above="@+id/button3">
    </ListView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="startPlayList" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/button4"
        android:onClick="stopPlayList"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/music_list"
        android:layout_alignEnd="@+id/music_list" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:id="@+id/button7"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="pausePlayList" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resume"
        android:id="@+id/button8"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/button7"
        android:layout_alignStart="@+id/button7"
        android:onClick="resumePlayList" />

</RelativeLayout>
