<!--
   This file is part of MyPlaylist.

    MyPlaylist is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    MyPlaylist is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with MyPlaylist.  If not, see <http://www.gnu.org/licenses/>.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    android:scaleType = "centerCrop"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="fr.eisti.android.myplaylist.activities.PlayListCreateActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/playlist_name"
        android:textSize="17sp"
        android:textColor="#C0C0C0"
        android:textStyle="bold"
        android:id="@+id/textView"
        android:layout_alignTop="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="moveFocus"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:id="@+id/editText"
        android:textColor="#C0C0C0"
        android:textSize="17sp"
        android:visibility="visible"
        android:editable="true"
        android:autoText="false"
        android:layout_toRightOf="@+id/button"
        android:focusable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/playlist_music_choice"
        android:textSize="17sp"
        android:textColor="#C0C0C0"
        android:textStyle="bold"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:id="@+id/music_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_above="@+id/button">
    </ListView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlist_create_button"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="createPlayList"
        android:clickable="true" />

</RelativeLayout>
